--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,13 @@ dependencies = [
     "channels>=4.2.2",
     "channels-redis>=4.2.1",
     "cryptography>=45.0.4",
-    "django>=5.2.3",
-    "django-allauth>=65.9.0",
-    "django-cors-headers>=4.7.0",
-    "django-split-settings>=1.3.2",
-    "djangorestframework>=3.16.0",
-    "djangorestframework-simplejwt>=5.5.0",
-    "requests>=2.32.4",
-    "uvicorn>=0.34.3",
 ]
+
+[tool.setuptools]
+packages = ["config", "oauth"]
+
+[tool.setuptools.packages.find]
+include = ["config*", "oauth*"]
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings.local"
@@ -24,6 +22,4 @@ python_files = ["test_*.py", "*_test.py", "tests.py"]
 
 [dependency-groups]
 dev = [
-    "pytest>=8.4.0",
-    "pytest-django>=4.11.1",
 ]
