테스트 코드 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "uvicorn>=0.34.3",
 ]
 
+[tool.setuptools.packages.find]
+include = ["config*", "oauth*"]
+
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings.local"
 python_files = ["test_*.py", "*_test.py", "tests.py"]
@@ -25,5 +28,6 @@ python_files = ["test_*.py", "*_test.py", "tests.py"]
 [dependency-groups]
 dev = [
     "pytest>=8.4.0",
-    "pytest-django>=4.11.1",
+    "pytest-django",
+    "pytest-cov",
 ]
