--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "channels>=4.2.2",
     "channels-redis>=4.2.1",
     "cryptography>=45.0.4",
+    "dj-database-url>=3.0.0",
     "django>=5.2.3",
     "django-allauth>=65.9.0",
     "django-cors-headers>=4.7.0",
+    "django-environ>=0.12.0",
+    "django-prometheus>=2.4.0",
     "django-split-settings>=1.3.2",
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
