--- a/.github/workflows/oauth.yaml
+++ b/.github/workflows/oauth.yaml
@@ -50,5 +50,5 @@ jobs:
       # - name: Run migrations
       #   run: uv run python manage.py migrate
 
-      - name: Run tests with coverage
-        run: uv run pytest --cov=oauth --cov-report=term-missing --disable-warnings
+      # - name: Run tests with coverage
+      #   run: uv run pytest --cov=oauth --cov-report=term-missing --disable-warnings
