--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
     "django-prometheus>=2.4.0",
+    "django-redis>=6.0.0",
     "django-split-settings>=1.3.2",
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
