chore: git 캐시에서 무시되어야 할 추적 파일들 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,11 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+collected_static_auth/
+logs/
+uploaded_media_auth/
+.pytest_cache/
+.venv/
+db.sqlite3
+static/
