--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "django-split-settings>=1.3.2",
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
+    "pillow>=11.3.0",
     "psycopg>=3.2.9",
     "psycopg2-binary>=2.9.10",
     "requests>=2.32.4",
