--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "channels>=4.2.2",
     "channels-redis>=4.2.1",
+    "confluent-kafka==2.10.0",
     "cryptography>=45.0.4",
     "dj-database-url>=3.0.0",
     "django>=5.2.3",
